<resources>
    <string name="app_name">SocialNetworkPamak</string>
    <string name="app_title">Social Network</string>
    <string name="logInTitle">LOG IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="email">E-mail</string>
    <string name="regnum">Registration Number</string>
    <string name="signUpTitle">SIGN UP</string>
    <string name="type">Type</string>
    <string name="student">Student</string>
    <string name="professor">Professor</string>
    <string name="allType">All</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="forum">Forum</string>
    <string name="messenger">Messenger</string>
    <string name="friends">Friends</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="textAreaThread">Write here your post.</string>
    <string name="editBtn">Edit</string>
    <string name="saveBtn">Save</string>
    <string name="deleteBtn">Delete</string>
    <string name="createBtn">Create</string>
    <string name="cancelBtn">Cancel</string>
    <string name="addThread">+Add a new Thread</string>
    <string name="addThreadNameHint">Thread Name</string>
    <string name="addThreadDescHint">Thread Description</string>
    <string name="postItemsEmpty">NO POSTS ADDED YET.</string>
    <string name="threadItemsEmpty">NO THREADS ADDED YET.</string>
    <string name="search">Search</string>
    <string name="user">User</string>
    <string name="thread">Thread</string>
    <string name="post">Post</string>
    <string name="dropDownEdit">Edit</string>
    <string name="dropDownDelete">Delete</string>
    <string name="addFriend">Add Friend</string>
    <string name="noResultsSearch">NO RESULTS FOUND.</string>
    <string name="friendRequests">See your friend requests</string>
    <string name="friendRequestTitle">Friend Requests</string>
    <string name="friendItemsEmpty">NO FRIENDS ADDED YET.</string>
    <string name="friendRequestItemsEmpty">NO FRIEND REQUESTS FOUND.</string>
    <string name="acceptTxt">ACCEPT</string>
    <string name="declineTxt">DECLINE</string>
    <string name="removeFriendBtn">REMOVE FRIEND</string>
    <string name="messageTxtHint">Enter Message</string>
    <string name="messengerEmpty">NO MESSAGES SENT YET.</string>
    <string name="sendTxt">SEND</string>
</resources>
