<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutLogIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_1">

    <ProgressBar
        android:id="@+id/login_progBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/app_title_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusedByDefault="true"
        android:fontFamily="@font/anton"
        android:paddingTop="5dp"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@color/colorTextParams"
        android:textSize="28sp"
        android:textStyle="bold" />

    <view
        class="androidx.appcompat.widget.LinearLayoutCompat"
        id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <LinearLayout android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px" >
        <requestFocus />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_txt_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorTextParams"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/AppTheme">

        <EditText
            android:id="@+id/username_txt_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/username_password_edit_text_shape"
            android:fontFamily="sans-serif"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColor="@color/colorTextParams"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <view
        class="androidx.appcompat.widget.LinearLayoutCompat"
        id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_txt_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorTextParams"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/AppTheme">

        <EditText
            android:id="@+id/password_txt_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/username_password_edit_text_shape"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="@color/colorTextParams"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <view
        class="androidx.appcompat.widget.LinearLayoutCompat"
        id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <Button
        android:id="@+id/login_btn_signup"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/log_in_buttonshape"
        android:fontFamily="@font/archivo_black"
        android:text="@string/logInTitle"
        android:textAlignment="center"
        android:textColor="@color/startscreen_btns"
        android:textSize="26sp"
        android:textStyle="bold" />

    <view
        class="androidx.appcompat.widget.LinearLayoutCompat"
        id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/signup_btn_signup"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/sign_up_buttonshape"
        android:fontFamily="@font/archivo_black"
        android:text="@string/signUpTitle"
        android:textAlignment="center"
        android:textColor="@color/startscreen_btns"
        android:textSize="26sp"
        android:textStyle="bold" />

</LinearLayout>