<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1">
    <ImageView
        android:id="@+id/logOuBtnEditThread"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/log_out_img" />

    <ScrollView
        android:id="@+id/scrollViewAddThread"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cancelBtnEditThread"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/cancel_buttonshape"
                android:text="@string/cancelBtn"
                android:textColor="@color/colorTextParams"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editBtnEditThread"
                app:layout_constraintTop_toBottomOf="@id/threadTypeRadioGroupEdit" />

            <Button
                android:id="@+id/editBtnEditThread"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/create_buttonshape"
                android:text="@string/editBtn"
                android:textColor="@color/colorTextParams"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/cancelBtnEditThread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/threadTypeRadioGroupEdit" />

            <RadioGroup
                android:id="@+id/threadTypeRadioGroupEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/threadDescEditThread">

                <RadioButton
                    android:id="@+id/threadTypeStudentProfEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/archivo_black"
                    android:textColor="@color/colorTextParams"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/threadTypeAllEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/archivo_black"
                    android:text="@string/allType"
                    android:textColor="@color/colorTextParams"
                    android:textSize="20sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/app_title_editThread"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/anton"
                android:paddingTop="5dp"
                android:text="@string/app_title"
                android:textAlignment="center"
                android:textColor="@color/colorTextParams"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/threadDescEditThread"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="10dp"
                android:textColorHint="@color/colorTextParamsAddThread"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/AppTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_title_editThread">

                <EditText
                    android:id="@+id/threadDescEditThreadText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/add_thread_background"
                    android:fontFamily="sans-serif"
                    android:hint="@string/addThreadDescHint"
                    android:inputType="textMultiLine"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/colorTextParams"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>